# ECE551-Video-Seg

./: .gitmodules  LICENSE  README.md  docker-compose.yml  evaluation.py  pyproject.toml
scripts/: create_davis_subset.py  video_evaluation.py
