[project]
name = "ece551-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "requests>=2.32.4",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
